<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/bannerJuego"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/bannerdados"
            android:contentDescription="@string/dados" />

        <ImageView
            android:id="@+id/imageJuego"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_dados"
            android:contentDescription="@string/dados" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_mero_de_jugadores"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/spinnerJugadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <LinearLayout
            android:id="@+id/containerNombres"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnGuardarOpciones"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/guardar_y_empezar"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:textColor="#000000"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_gravity="center" />

        <!-- Nuevo botón para abrir la lista de jugadores -->
        <Button
            android:id="@+id/btnListaJugadores"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lista_de_jugadores"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:textColor="#000000"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>
