<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="VisualLintBounds">

    <!-- Encabezados para Jugador y Máx. Puntuación -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="8dp">

        <!-- Encabezado Jugador -->
        <TextView
            android:id="@+id/labelJugador"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jugador"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="start" />

        <!-- Encabezado Máx. Puntuación -->
        <TextView
            android:id="@+id/labelMaxPuntuacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/m_x_puntuaci_n"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="end" />
    </LinearLayout>

    <!-- Lista de jugadores -->
    <ListView
        android:id="@+id/listViewJugadores"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />

    <!-- Botón Nuevo Jugador -->
    <Button
        android:id="@+id/btnNuevoJugador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_jugador"
        tools:ignore="VisualLintButtonSize"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:textColor="#000000"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_gravity="center" />
</LinearLayout>
